--- a/EasyChat/Views/Overlay/OverlayWindow.axaml
+++ b/EasyChat/Views/Overlay/OverlayWindow.axaml
@@ -2,6 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:lang="clr-namespace:EasyChat.Lang"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="EasyChat.Views.Overlay.OverlayWindow"
         Closed="TopLevel_OnClosed" KeyDown="InputElement_OnKeyDown"
@@ -12,5 +13,15 @@
                    StrokeThickness="2"
                    Fill="#33FF0000"
                    IsVisible="False" />
+        
+        <Border x:Name="HintBorder"
+                Background="#CC000000"
+                Padding="16,12"
+                CornerRadius="8"
+                IsVisible="False">
+            <TextBlock Text="{x:Static lang:Resources.Screenshot_Hint}"
+                       Foreground="White"
+                       FontSize="16" />
+        </Border>
     </Canvas>
 </Window>
