feat: Add Screenshot Image Translation feature

--- a/EasyChat/Views/Overlay/OverlayWindow.axaml
+++ b/EasyChat/Views/Overlay/OverlayWindow.axaml
@@ -1,4 +1,4 @@
-﻿<Window xmlns="https://github.com/avaloniaui"
+<Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -125,6 +125,12 @@
                        <icon:MaterialIcon Kind="ViewAgenda" />
                        <TextBlock Text="{x:Static lang:Resources.CopyBilingual}" VerticalAlignment="Center" />
                    </StackPanel>
+                </Button>
+                <Button Click="CopyImageTranslated_OnClick">
+                    <StackPanel Orientation="Horizontal" Spacing="10">
+                        <icon:MaterialIcon Kind="ImageEdit" />
+                        <TextBlock Text="Image Translate" VerticalAlignment="Center" />
+                    </StackPanel>
                 </Button>
             </StackPanel>
         </Border>
