--- a/EasyChat/Views/Overlay/OverlayWindow.axaml
+++ b/EasyChat/Views/Overlay/OverlayWindow.axaml
@@ -30,7 +30,8 @@
         <Border x:Name="HintBorder"
                 Background="#CC000000"
                 Padding="16,12"
-                CornerRadius="8">
+                CornerRadius="8"
+                IsVisible="False">
             <TextBlock Text="{x:Static lang:Resources.Screenshot_Hint}"
                        Foreground="White"
                        FontSize="16" />
