i18n: Update translations and adjust window visibility

--- a/EasyChat/Views/Typing/TypingView.axaml
+++ b/EasyChat/Views/Typing/TypingView.axaml
@@ -14,6 +14,7 @@
         TransparencyLevelHint="Blur"
         Background="Transparent"
         Topmost="True"
+        ShowInTaskbar="False"
         Title="{x:Static lang:Resources.TranslateToWindow}">
 
     <Panel>
