--- a/EasyChat/Views/Pages/SettingView.axaml
+++ b/EasyChat/Views/Pages/SettingView.axaml
@@ -13,7 +13,6 @@
              x:DataType="viewModels:SettingViewModel"
              mc:Ignorable="d">
     <UserControl.Resources>
-        <converts:EqualityMultiConverter x:Key="EqualityMultiConverter" />
         <converts:EnumToDescriptionConverter x:Key="EnumToDescriptionConverter" />
         <converts:ColorToHexConverter x:Key="ColorToHexConverter" />
         <converts:DeliveryModeToBoolConverter x:Key="DeliveryModeToBoolConverter" />
@@ -703,6 +702,11 @@
                                         </ComboBox.ItemTemplate>
                                     </ComboBox>
                                 </StackPanel>
+                                <Button Content="{x:Static lang:Resources.FixedAreaSettings}" 
+                                        Command="{Binding ManageFixedAreasCommand}" 
+                                        HorizontalAlignment="Left"
+                                        Classes="Flat"
+                                        Margin="0,5,0,0"/>
                             </StackPanel>
                         </suki:GlassCard>
                     </suki:SettingsLayoutItem.Content>
