--- a/EasyChat/Views/Speech/SubtitleOverlayWindowView.axaml
+++ b/EasyChat/Views/Speech/SubtitleOverlayWindowView.axaml
@@ -7,7 +7,7 @@
         xmlns:converts="clr-namespace:EasyChat.Converters;assembly=EasyChat"
         xmlns:suki="https://github.com/kikipoulet/SukiUI"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="150"
-        x:Class="EasyChat.Views.Speech.SubtitleOverlayWindow"
+        x:Class="EasyChat.Views.Speech.SubtitleOverlayWindowView"
         x:DataType="vm:SpeechRecognitionViewModel"
         Title="SubtitleOverlayWindow"
         SystemDecorations="None"
